--- a/package.json
+++ b/package.json
@@ -11,9 +11,15 @@
     "license": "ISC",
     "dependencies": {
         "chalk": "4.1.2",
-        "cli-progress": "^3.10.0",
+        "dotenv": "^16.0.0",
+        "jsdom": "^19.0.0",
         "node-console-colors": "^1.1.4",
         "node-status": "^1.0.0",
-        "puppeteer": "^13.1.3"
+        "proxy-chain": "^1.0.4",
+        "puppeteer": "^13.1.3",
+        "puppeteer-cluster": "^0.23.0"
+    },
+    "devDependencies": {
+        "jest": "^27.5.1"
     }
 }
