--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,3 +30,12 @@ jobs:
           GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
 
     - run: npm run test test
+
+    - name: Stage, commit and push files
+      uses: stefanzweifel/git-auto-commit-action@v4
+      with:
+          commit_user_name: "typeselector-bot"
+          commit_user_email: "typeselector-bot@users.noreply.github.com"
+          commit_author: "typeselector-bot <typeselector-bot@users.noreply.github.com>"
+          commit_message: "chore(build): update packages [Weekly]"
+      continue-on-error: false
