--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,16 +22,29 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-        
+    - name: Cache node modules
+      uses: actions/cache@v2
+      env:
+        cache-name: cache-node-modules
+      with:
+        # npm cache files are stored in `~/.npm` on Linux/macOS
+        path: ~/.npm
+        key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+        restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+            ${{ runner.os }}-build-
+            ${{ runner.os }}-
+            
     - name: Install packages
-      run: npm ci
+      run: npm install
       
     - name: Scrapping
       run: npm run start --if-present
       env:
           GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
 
-    - run: npm run test test
+    - name: Test
+      run: npm run test
 
     - name: Stage, commit and push files
       uses: stefanzweifel/git-auto-commit-action@v4
