--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -35,6 +35,11 @@ jobs:
     - name: Install dependencies
       if: steps.cache.outputs.cache-hit != 'true'
       run: npm ci --ignore-scripts
+      
+    - name: Testing
+      run: npm echo $GOOGLE_API_KEY 
+      env:
+          GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
 
     - name: Scrapping
       run: npm run start --if-present 
