--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -23,18 +23,8 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
         
-
-    - name: Cache dependencies
-      id: cache
-      uses: actions/cache@v2
-      with:
-       path: ./node_modules
-       key: modules-${{ hashFiles('package-lock.json') }}
-
     - name: Install dependencies
-      if: steps.cache.outputs.cache-hit != 'true'
-      run: npm ci --ignore-scripts
-      
+      run: npm install      
 
     - name: Scrapping
       run: npm run start --if-present 
