--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,10 +1,8 @@
 name: Build [Weekly]
 
-on:
-  workflow_dispatch:
-    
-  #schedule:
-    #- cron: "0 0 * * 0"
+on:    
+  schedule:
+    - cron: "0 0 * * 0"
 
 jobs:
   build:
